added the href to github

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li>Voila!</li>
             </ol>
 
-            <h6>*Now follow these steps to push the WeekOneReview folder up to GitHub</h6>
+            <h6>*Now follow these steps to push the WeekOneReview folder up to <a href="https://github.com/" target="_blank">GitHub.</a></h6>
 
             <!-- Live Server shortcut is CMD + L + O (the letter O) -->
 
